YARN-11952. Java8 fixes